# from-jira-to-tests

./: README.md  input_user_story.md  main.py  pyproject.toml  ruff.toml  tc_definition.py  test_cases.md  testcase_generator.py  user_story.md  validator.py
output/: additional_gap_tests.md  edge_case_tests.md  gap_analysis.md  main_test_cases.md
src/: edge_cases.md  edgecase_generator.py  gap_analyzer.py  output_formatter.py  suite_generator.py  testcase_generator.py
tests/: test_edgcase_generator.py  test_testcase_generator.py  test_validator.py
